--- a/src/main/resources/META-INF/resources/websites/fieldtypes.xhtml
+++ b/src/main/resources/META-INF/resources/websites/fieldtypes.xhtml
@@ -52,6 +52,9 @@
                         <p:column headerText="CSS Selectors">
                             <h:outputText value="#{fieldType.selectors}"/>
                         </p:column>
+                        <p:column headerText="Regex">
+                            <h:outputText value="#{fieldType.regex}"/>
+                        </p:column>
                         <f:facet name="footer">
                             <p:commandButton
                                     value="Add new field type"
