--- a/src/main/resources/META-INF/resources/websites/websites.xhtml
+++ b/src/main/resources/META-INF/resources/websites/websites.xhtml
@@ -46,6 +46,7 @@
                         <p:column headerText="Url" filterable="true" filterBy="#{website.url}">
                             <h:outputText value="#{website.url}"/>
                         </p:column>
+
                         <f:facet name="footer">
                             <p:commandButton
                                     value="Add new website"
@@ -84,6 +85,25 @@
                             </p:commandButton>
                         </f:facet>
                     </p:dataTable>
+
+                    <p:contextMenu for="dataTable">
+                        <p:menuitem value="Edit" action="#{websitesController.onEdit}" update="content"/>
+                        <p:menuitem value="Page types" action="#{websitesController.onPageTypes}"
+                                    update="content"/>
+                        <p:menuitem value="Field types" action="#{websitesController.onFieldTypes}"
+                                    update="content"/>
+                        <p:menuitem value="Show parsed data" action="#{websitesController.onShowParsedData}"
+                                    update="content"/>
+                        <p:menuitem value="Website crawler" action="#{websitesController.onCrawlerSettings}"
+                                    update="content"/>
+                        <p:menuitem value="Test fetch page" action="#{websitesController.onOpenFetchPageForm}"
+                                    update="content"/>
+                        <p:menuitem value="Delete" action="#{websitesController.onDelete}"
+                                    update="content">
+                            <p:confirm header="Confirmation"
+                                       message="Are you sure?" icon="ui-icon-alert"/>
+                        </p:menuitem>
+                    </p:contextMenu>
 
                     <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
                         <p:commandButton value="Yes"
