Modified website fetch tester

--- a/src/main/resources/META-INF/resources/websites/add-fieldtype.xhtml
+++ b/src/main/resources/META-INF/resources/websites/add-fieldtype.xhtml
@@ -15,8 +15,8 @@
         <h:outputStylesheet library="css" name="main.css"/>
 
         <f:metadata>
-            <f:event type="postValidate" listener="#{fieldTypesController.postValidate}"/>
-            <f:event type="postAddToView" listener="#{fieldTypesController.postAddToView}"/>
+            <!--<f:event type="postValidate" listener="#{fieldTypesController.postValidate}"/>-->
+            <!--<f:event type="postAddToView" listener="#{fieldTypesController.postAddToView}"/>-->
         </f:metadata>
     </h:head>
     <h:body>
