--- a/src/main/resources/META-INF/resources/websites/parseddata.xhtml
+++ b/src/main/resources/META-INF/resources/websites/parseddata.xhtml
@@ -24,7 +24,11 @@
                 <h:column>
                     <ui:include src="../parts/menu.xhtml"/>
                 </h:column>
-                <p:dataTable value="#{parsedDataController.model.pageTypes}" var="type">
+                <p:dataTable
+                        paginator="true"
+                        rows="5"
+                        rowsPerPageTemplate="5, 10, 15"
+                        value="#{parsedDataController.model.pageTypes}" var="type">
                     <f:facet name="header">
                         <h:outputText value="Page types" />
                     </f:facet>
